Background was too long for browser, fixed the top positioning

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, div {
 .bg {
 	position: absolute;
 	width: 100%;
-	top: 100px;
+	top: 10%;
 	height: 90%;
 	background-repeat: none;
 	background-position: center;
